[gd_scene load_steps=2 format=2]

[ext_resource path="res://AutoLoad/GlobalMusic/GlobalMusic.gd" type="Script" id=1]

[node name="GlobalMusic" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="VolumeTween" type="Tween" parent="."]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="tween_completed" from="VolumeTween" to="." method="_on_VolumeTween_tween_completed"]
